codepkg/objects/Stack__c.object
<CustomObject>
    <description>Incoming document stack for zPaper solution.</description>
    <fields>
        <fullName>Attach_to_Contact_Type__c</fullName>
        <description>Used in &quot;Enbrel Contact&quot; DE form to filter Contact result values by the correct Contact record type when the user is doing a Contact lookup.</description>
        <label>Attach to Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attached_To_Case_At__c</fullName>
        <description>The time at which the document was attached to a Case</description>
        <label>Attached At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attached_To_Case_By__c</fullName>
        <description>The individual that Attached the document to the applicable Case</description>
        <label>Attached By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attributes_Completed_By__c</fullName>
        <description>The individual who completed the attributes in the DE panel.</description>
        <label>Attributes Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attributes_Entered_At__c</fullName>
        <description>The time in which the Attribute values were determined (or last updated) by saving the DE panel.</description>
        <label>Attributes Entered At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bucket__c</fullName>
        <label>Bucket</label>
        <picklist>
            <controllingField>Program_Name__c</controllingField>
            <picklistValues>
                <fullName>Main Benefits Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Program Sort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Re-App Too Soon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Refill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Refill Too Soon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology Program Sort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology Projects Bucket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology Refill Too Soon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Pharma PAP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSR_Processing_Time__c</fullName>
        <description>Number of business hours (M-F 8am-8pm) between CSR taking ownership of the stack to stack Status updated to Complete</description>
        <formula>Completed_On__c - Processing_Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSR Processing Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Case record related to this Document Stack.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Stacks</relationshipLabel>
        <relationshipName>Stacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Insurance Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Picklist to track the communication type e.g. ‘Fax’</description>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <description>User who updated the status field of the Stack to Complete</description>
        <label>Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_On__c</fullName>
        <description>The date/time when the status of the Stack was updated to Complete</description>
        <label>Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created__c</fullName>
        <description>Created date formatted for display in list views (shows date only)</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>Picklist to identify the type of document attached to the Stack</description>
        <label>Document Type</label>
        <picklist>
            <controllingField>Program_Name__c</controllingField>
            <picklistValues>
                <fullName>Insurance Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology New Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology Refill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Summary Faxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ExpressStart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Service IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse Partner Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power of Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescription (Rx)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SafetyNet IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cover Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denial Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Consent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax_Line__c</fullName>
        <description>Returns the name of the program associated with the fax line</description>
        <formula>CASE(Program_Name__c, 
&quot;Oncology&quot;, &quot;Oncology&quot;, 
&quot;Main&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_in_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the stack&apos;s image is in use by another record, ex. Prescription Image.</description>
        <inlineHelpText>Checked if the stack&apos;s image is in use by another record, ex. Prescription Image.</inlineHelpText>
        <label>Image in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labeler_Patient_DoB__c</fullName>
        <description>The Patient DOB as captured by the Labeler when conducting initial Data Entry.</description>
        <label>Patient DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Labeler_Patient_First_Name__c</fullName>
        <description>The Patient First Name as captured by the Labeler when conducting initial Data Entry.</description>
        <label>Patient First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labeler_Patient_Last_Name__c</fullName>
        <description>The Patient Last Name as captured by the Labeler when conducting initial Data Entry.</description>
        <label>Patient Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labeling_End_Time__c</fullName>
        <description>Date/time when the stack is assigned to a Processing queue</description>
        <label>Labeling End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lock_Stack__c</fullName>
        <description>Hyperlink that allows user to lock the Stack record</description>
        <formula>HYPERLINK(&quot;https://&quot; &amp; $Setup.ZPAPER__zpaper__c.ZPAPER__server__c &amp; &quot;/kb/jsp/SF_find.jsp?go=execRulesEngine.jsp&amp;updateDB=true&amp;X_buttonAction=Lock&amp;X_lockUser=&quot;&amp; $User.Username&amp;&quot;&amp;dbID=&quot; &amp; receivedId__c &amp; &quot;&amp;SFserver=&quot; &amp; $Api.Partner_Server_URL_310 &amp; &quot;&amp;SFsession=&quot; &amp; $Api.Session_ID, &quot;Lock&quot;,&quot;Stack&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lock</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mark_as_Complete__c</fullName>
        <description>Hyperlink to update status of the Stack field to Complete</description>
        <formula>HYPERLINK(&apos;/&apos;, &apos;Mark as Complete&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mark as Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Process_Date__c</fullName>
        <label>Next Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>A notes field to allow a User to track any special notes against the inbound Stack</description>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Pages__c</fullName>
        <description>The number of pages in the Stack</description>
        <label># of Pages</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Picklist to track the communication type e.g. ‘Fax’</description>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Stack_Number__c</fullName>
        <description>In the event an incoming Stack is split into multiple Stacks, this field is populated with a reference to the original Stack number</description>
        <label>Parent Stack Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_DOB_SYNC__c</fullName>
        <description>** DO NOT DELETE THIS FIELD ** This field is required to synchronize the updates made via the Data Entry panel. This field is needed because Salesforce won&apos;t&apos; allow us to update cross-object (reference) fields.</description>
        <label>Patient DOB SYNC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_DOB__c</fullName>
        <formula>Patient__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient DOB DEPRECATED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_First_Name_SYNC__c</fullName>
        <description>** DO NOT DELETE THIS FIELD ** This field is required to synchronize the updates made via the Data Entry panel. This field is needed because Salesforce won&apos;t&apos; allow us to update cross-object (reference) fields.</description>
        <label>Patient First Name SYNC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_First_Name__c</fullName>
        <formula>Patient__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient First Name DEPRECATED</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Last_Name_SYNC__c</fullName>
        <description>This field is required to synchronize the updates made via the Data Entry panel. This field is needed because Salesforce won&apos;t&apos; allow us to update cross-object (reference) fields.</description>
        <label>Patient Last Name SYNC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Last_Name__c</fullName>
        <formula>Patient__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Last Name DEPRECATED</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Mobile__c</fullName>
        <label>Patient Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the Patient to which this Stack is related;
Changed field label to contact as part of Enbrel project</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Stacks</relationshipLabel>
        <relationshipName>Stacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Picklist to allow for Priority designation on the inbound Stack</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processing_Start_Time__c</fullName>
        <description>Date/time of when CSR takes ownership of the Stack from the Processing queue</description>
        <label>Processing Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Program_Name_New__c</fullName>
        <defaultValue>&quot;TevaCares&quot;</defaultValue>
        <description>Patient Assistance Program name. This field is used on the user interface and is different from the field zAction Program Name.</description>
        <label>Program Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <description>This field is updated behind the scenes by a zPaper zAction rule and is used in subsequent formulas.</description>
        <label>zAction Program Name</label>
        <picklist>
            <picklistValues>
                <fullName>Teva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enbrel Support Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ExpressStart Stack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUN PHARMA Patient Access Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider_First_Name__c</fullName>
        <description>The First Name of the Provider related to the inbound Stack</description>
        <label>Provider First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Last_Name__c</fullName>
        <description>The Last Name of the Provider related to the inbound Stack</description>
        <label>Provider Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_NPI__c</fullName>
        <description>The NPI of the Provider related to the inbound Stack</description>
        <label>Provider NPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <description>Queue picklist field that is displayed on the zPaper Add Attributes data entry panel</description>
        <label>Queue</label>
        <picklist>
            <controllingField>Program_Name__c</controllingField>
            <picklistValues>
                <fullName>Main Program Sort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Refill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Refill Too Soon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Re-App Too Soon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Benefits Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology Program Sort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology Refill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Pharma PAP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <description>Timestamp of when the Stack was originally received</description>
        <label>Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <picklist>
            <controllingField>Program_Name__c</controllingField>
            <picklistValues>
                <fullName>Adverse Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enbrel ExpressStart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enbrel Support Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Adverse Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reimbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Pharma PAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Pharma Reimbursement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Incoming fax number</description>
        <label>Caller ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_By__c</fullName>
        <description>The name of the individual that split the stack into individual documents (and subsequent new stack records)</description>
        <label>Split By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Occurred_At__c</fullName>
        <description>This is the date/time at which the Split Occurred</description>
        <label>Split Occurred At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The current status of the Stack</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labeled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Stack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split from Stack</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Labeling_Time__c</fullName>
        <description>The number of business hours (M-F 8am-8pm) between Received Date and the time the stack is assigned to a Processing queue</description>
        <formula>Labeling_End_Time__c - Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Labeling Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Processing_Time__c</fullName>
        <description>The number of business hours (M-F 8am-8pm) between Received Date and stack being marked as Complete</description>
        <formula>Completed_On__c -  Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Processing Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_Stack__c</fullName>
        <description>A hyperlink to view the document image</description>
        <formula>HYPERLINK(&quot;https://&quot; &amp; $Setup.ZPAPER__zpaper__c.ZPAPER__server__c &amp; &quot;/kb/jsp/SF_find.jsp?go=SF_files.jsp&amp;dbID=&quot; &amp; receivedId__c &amp; &quot;&amp;SFserver=&quot; &amp; $Api.Partner_Server_URL_310 &amp; &quot;&amp;SFsession=&quot; &amp; $Api.Session_ID, &quot;View&quot;,&quot;Stack&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>faxAgain__c</fullName>
        <defaultValue>false</defaultValue>
        <description>zPaper field used with Salesforce workflows and zActions.</description>
        <label>Send Again</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>faxType__c</fullName>
        <description>zPaper field used with Salesforce workflows and zActions.</description>
        <label>zDoc Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>groupID__c</fullName>
        <description>holds fax id from FTP</description>
        <label>Group ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>imageIDs__c</fullName>
        <description>holds a list of FTP fax IDs</description>
        <inlineHelpText>holds a list of FTP fax IDs</inlineHelpText>
        <label>Image IDs</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>latestFax__c</fullName>
        <description>The time when the latest Document arrived that is associated with this record.</description>
        <label>Latest Document</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>newFax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>zPaper field used with Salesforce workflows and zActions.</description>
        <label>New Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>outboundFaxTemplate__c</fullName>
        <description>zPaper field used with Salesforce workflows and zActions.</description>
        <label>Outbound Fax Template</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentDBId__c</fullName>
        <description>In the event an incoming Stack is split into multiple Stacks, this field is populated with a reference to the original Stack ID</description>
        <label>Parent Stack ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>producedId__c</fullName>
        <description>zPaper field used with Salesforce workflows and zActions.</description>
        <label>Produced ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>receivedId__c</fullName>
        <description>zPaper field used with Salesforce workflows and zActions.</description>
        <label>Received ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sentFaxAt__c</fullName>
        <description>zPaper field used with Salesforce workflows and zActions.</description>
        <label>Sent Document At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sentFaxStatus__c</fullName>
        <description>zPaper field used with Salesforce workflows and zActions.</description>
        <label>Sent Document Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sentFaxTo__c</fullName>
        <description>zPaper field used with Salesforce workflows and zActions.</description>
        <label>Sent Document To</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sentFax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>zPaper field used with Salesforce workflows and zActions.</description>
        <label>Sent Document</label>
        <type>Checkbox</type>
    </fields>
    <label>Stack</label>
    <listViews>
        <fullName>Test_UAT_View</fullName>
        <columns>NAME</columns>
        <columns>Number_of_Pages__c</columns>
        <columns>Attributes_Entered_At__c</columns>
        <columns>Bucket__c</columns>
        <columns>Source__c</columns>
        <columns>Case__c</columns>
        <columns>Category__c</columns>
        <columns>Channel__c</columns>
        <columns>Patient__c</columns>
        <columns>CSR_Processing_Time__c</columns>
        <columns>Document_Type__c</columns>
        <columns>Fax_Line__c</columns>
        <columns>groupID__c</columns>
        <columns>imageIDs__c</columns>
        <filterScope>Everything</filterScope>
        <label>Test UAT View</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Stack Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stacks</pluralLabel>
    <recordTypes>
        <fullName>Assigned_Stack</fullName>
        <active>true</active>
        <description>Stack is considered assigned if it is owned by an individual user.</description>
        <label>Assigned Stack</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unassigned_Stack</fullName>
        <active>true</active>
        <description>Stack is considered unassigned if it is owned by a queue.</description>
        <label>Unassigned Stack</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>